made grammatical changes

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                 Cumalative GPA: 3.4/4.0
                             </li>
                             <li class="timeline-text">
-                                Dean’s List: Spring 2022, Fall 2022, Spring 2023, Fall 2023, Spring 2024
+                                Dean’s List: Spring 2022, Fall 2022, Spring 2023, Fall 2023
                             </li>
                         </ul>
                     </li>
@@ -473,13 +473,14 @@
 
                         <ul class="timeline-bullet-points">
                             <li class="timeline-text">
-                                As a participant in a 200-hour program, I had the opportunity to educate and organize activities
-                                for underprivileged kids to learn English, math, painting, dance, and basic computer skills.
-                                In addition to providing learning resources to these kids, I also coordinated a culminating
-                                activity where they could demonstrate what they had learned at this summer camp to their parents.
-                                This was a great opportunity to show the importance of education in a kid's life and to inspire
-                                these children to continue learning and growing. I am grateful for the chance to have made a
-                                positive impact in the lives of these kids and to have contributed to their development and success.
+                                Organized and facilitated educational activities in English, 
+                                mathematics, painting, dance, and basic computer skills for 
+                                underprivileged children as part of a 200-hour program.
+                            </li>
+                            <li class="timeline-text">
+                                Coordinated a culminating event where children showcased their 
+                                learning to parents, emphasizing the importance of education and 
+                                inspiring continued growth and learning.
                             </li>
 
                         </ul>
@@ -516,7 +517,7 @@
                         <h3 class="h5 clients-title" style="margin-top: 15px;">Application Redesign and Rebranding:</h3>
                         <ul class="timeline-bullet-points">
                             <li class="timeline-text">
-                                Spearheaded the rebranding of the application from Selfihealth to Bandhealth, redesigning UI elements, icons, and graphics to align with the new brand identity, resulting in a cohesive and visually appealing user experience.
+                                Led the rebranding of the application from Selfihealth to Bandhealth, redesigning UI elements, icons, and graphics to align with the new brand identity, resulting in a cohesive and visually appealing user experience.
                             </li>
                             <li class="timeline-text">
                                 Implemented vibrant avatars and profile picture enhancements on the app's homepage, in line with company color codes, fostering increased user engagement and interactivity.
@@ -624,7 +625,7 @@
 
                         <ul class="timeline-bullet-points">
                             <li class="timeline-text">
-                                Streamlined the coordination of more than 150 monthly events, holding a leadership role and achieving around
+                                Streamlined the coordination of more than 150 monthly events, holding a leadership role and achieving about
                                 95% attendee satisfaction rate, while fostering effective communication and teamwork among student staff.
                             </li>
                             <li class="timeline-text">
@@ -697,11 +698,12 @@
 
                         <ul class="timeline-bullet-points">
                             <li class="timeline-text">
-                                Developing a website that solves the need for accessible and dedicated student course 
-                                reviews by allowing students with a .edu email to log in and provide their honest feedback.
+                                Developing a website that provides students with accessible and dedicated student course
+                                reviews by allowing students with an institutional (.edu) email account to log in and provide 
+                                their honest feedback.
                             </li>
                             <li class="timeline-text">
-                                Implementing a leaderboard layout to showcase the easiest courses rated by students, providing 
+                                Implementing a leaderboard layout to display the easiest courses rated by students, providing 
                                 a valuable resource for course selection based on student feedback.
                             </li>
                             <li class="timeline-text">
@@ -723,7 +725,7 @@
                         <ul class="timeline-bullet-points">
                             <li class="timeline-text">
                                 Designed and implemented perceptron and two-layer neural network classifiers for face and digit 
-                                recognition, incorporating feature extraction and data analysis.
+                                recognition, encorporating feature extraction and data analysis.
                             </li>
                             <li class="timeline-text">
                                 Analyzed and compared training times and prediction errors, producing a report that highlights the 
@@ -748,11 +750,11 @@
                             </li>
                             <li class="timeline-text">
                                 Implemented and optimized Repeated Forward A* and Adaptive A* algorithms, achieving efficient pathfinding with reduced 
-                                computational costs, demonstrated by faster execution and fewer cell expansions compared to standard A*.
+                                computational costs, demonstrated by faster execution, and fewer cell expansions compared to standard A*.
                             </li>
                             <li class="timeline-text">
                                 Conducted statistical analysis on the performance of various search strategies, providing valuable insights into the 
-                                effectiveness and reliability of AI pathfinding algorithms, underpinning the robustness of the developed navigation system.
+                                effectiveness and reliability of AI pathfinding algorithms.
                             </li>
                         </ul>
 
@@ -770,13 +772,16 @@
 
                         <ul class="timeline-bullet-points">
                             <li class="timeline-text">
-                                Developed a system to collect and analyze Donald Trump's tweets using Twitter API, ensuring uniqueness by tweet ID and organizing data into a DataFrame sorted by timestamps.
+                                Developed a system to collect and analyze Donald Trump's tweets using Twitter API, ensuring uniqueness 
+                                by tweet ID and organizing data into a DataFrame sorted by timestamps.
                             </li>
                             <li class="timeline-text">
-                                Implemented VADER lexicon for sentiment analysis to quantify emotions in tweets, adapting the tool for social media text to assess positivity or negativity.
+                                Implemented VADER lexicon for sentiment analysis to quantify emotions in tweets, adapting the tool for 
+                                social media text to assess positivity or negativity.
                             </li>
                             <li class="timeline-text">
-                                Extracted insights from sentiment scores, highlighting the impact of influential figures' tweets on public opinion and media discourse.
+                                Extracted insights from the sentiment scores, highlighting the impact of influential figures' tweets on public 
+                                opinion and media discourse.
                             </li>
                         </ul>
 
@@ -792,7 +797,7 @@
 
                         <ul class="timeline-bullet-points">
                             <li class="timeline-text">
-                                Engineered a Python HTTP server handling secure user authentication with SHA-256 hashed passwords,
+                                Engineered a Python HTTP server to handle secure user authentication with SHA-256 hashed passwords,
                                 session management with unique timed sessions, and robust GET/POST request processing for file access and user login.
                             </li>
                             <li class="timeline-text">
@@ -878,10 +883,10 @@
                         <ul class="timeline-bullet-points">
                             <li class="timeline-text">
                                 Created a tool to identify locations with short-term rental opportunities and generate a single Excel report which
-                                shortlist competitive listings.
+                                shortlists competitive listings.
                             </li>
                             <li class="timeline-text">
-                                Incorporated features for calculating occupancy rates and generating comprehensive
+                                Encorporated features for calculating occupancy rates and generating comprehensive
                                 Excel files that list the best-reviewed Airbnb properties with an occupancy rate of over 50% in a specific area.
                             </li>
                             <li class="timeline-text">
@@ -903,7 +908,7 @@
                         <ul class="timeline-bullet-points">
                             <li class="timeline-text">
                                 Developed an encrypted MySQL database auction site similar to E-Bay,
-                                which allow users to sell, and purchase used cloths with the option to bid and setup automated notification for certain product.
+                                which allows users to sell, and buy used products with the option to bid and setup automated notification for certain product.
                             </li>
                             <li class="timeline-text">
                                 Worked with Java, CSS, and HTML to create an intuitive user interface (UI) and user experience (UX) with more than 25 thorough
