--- a/index.html
+++ b/index.html
@@ -421,6 +421,7 @@
                     <h4>Frameworks:</h4>
                     <ul class="skills-list">
                         <li class="skills-item"><span class="skill-pill">React-Native</span></li>
+                        <li class="skills-item"><span class="skill-pill">Android SDK</span></li>
                         <li class="skills-item"><span class="skill-pill">React.js</span></li>
                         <li class="skills-item"><span class="skill-pill">Next.js</span></li>
                         <li class="skills-item"><span class="skill-pill">Node.js</span></li>
