Fixed RUSCA & Added transcript

--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
                             <li class="timeline-text">
                                 Dean’s List: Spring 2022, Fall 2022, Spring 2023, Fall 2023
                             </li>
+                            <a href="./assets/images/transcript.pdf"  target="_blank" style="color: #FFC000 " ;>View Transcript</a>
                         </ul>
                     </li>
                 </ol>
@@ -339,8 +340,9 @@
                                     little direction Aryaman redesigned our app’s home screen to bring the look and feel into
                                     alignment with a change in brand identity.
                                 </p>
+                                <a href="./assets/images/Bandhealth.pdf" id="viewRec" target="_blank" style="color: #FFC000 " ;>View Full Recommendation Letter</a>
                             </div>
-
+                            
                         </div>
                     </li>
 
@@ -363,6 +365,7 @@
                                     for the best. Aryaman’s drive is complemented by his approachable air, he focuses on making people feel
                                     at ease while handling situations together as a team to achieve the best outcome.
                                 </p>
+                                <a href="./assets/images/RUSCA.pdf" id="viewRec" target="_blank" style="color: #FFC000 " ;>View Full Recommendation Letter</a>
                             </div>
 
                         </div>
@@ -393,7 +396,7 @@
                         <div data-modal-text>
                             <p></p>
                         </div>
-                        <a href="./assets/images/Bandhealth.pdf" id="viewRec" target="_blank" style="color: #FFC000 " ;>View Full Recommendation Letter</a>
+                        
                     </div>
                 </section>
             </div>
@@ -415,6 +418,7 @@
                         <li class="skills-item"><span class="skill-pill">CSS</span></li>
                         <li class="skills-item"><span class="skill-pill">SQL</span></li>
                         <li class="skills-item"><span class="skill-pill">MongoDB</span></li>
+                        <li class="skills-item"><span class="skill-pill">C#</span></li>
                     </ul>
                 </div>
                 <div class="skills-category">
@@ -454,6 +458,7 @@
                         <li class="skills-item"><span class="skill-pill">XML</span></li>
                         <li class="skills-item"><span class="skill-pill">UML</span></li>
                         <li class="skills-item"><span class="skill-pill">Adobe Photoshop</span></li>
+                        <li class="skills-item"><span class="skill-pill">Responsive Design</span></li>
                     </ul>
                 </div>
             </section>
