Updated css for Bandhealth images

--- a/index.html
+++ b/index.html
@@ -551,69 +551,91 @@
                         <ul class="clients-list has-scrollbar">
 
                             <li class="clients-item">
-                                <a href="https://www.band.health/">
-                                    <img src="./assets/images/B1.jpg" alt="client logo">
-                                </a>
+                                <div class="brighten">
+                                    <a href="https://www.band.health/">
+                                        <img src="./assets/images/B1.jpg" alt="client logo">
+                                    </a>
+                                </div>
                             </li>
 
                             <li class="clients-item">
-                                <a href="https://www.band.health/">
-                                    <img src="./assets/images/B2.jpg" alt="client logo">
-                                </a>
+                                <div class="brighten">
+                                    <a href="https://www.band.health/">
+                                        <img src="./assets/images/B2.jpg" alt="client logo">
+                                    </a>
+                                </div>
                             </li>
 
                             <li class="clients-item">
-                                <a href="https://www.band.health/">
-                                    <img src="./assets/images/B3.jpg" alt="client logo">
-                                </a>
+                                <div class="brighten">
+                                    <a href="https://www.band.health/">
+                                        <img src="./assets/images/B3.jpg" alt="client logo">
+                                    </a>
+                                </div>
                             </li>
 
                             <li class="clients-item">
-                                <a href="https://www.band.health/">
-                                    <img src="./assets/images/B4.jpg" alt="client logo">
-                                </a>
+                                <div class="brighten">
+                                    <a href="https://www.band.health/">
+                                        <img src="./assets/images/B4.jpg" alt="client logo">
+                                    </a>
+                                </div>
                             </li>
 
                             <li class="clients-item">
-                                <a href="https://www.band.health/">
-                                    <img src="./assets/images/B5.jpg" alt="client logo">
-                                </a>
+                                <div class="brighten">
+                                    <a href="https://www.band.health/">
+                                        <img src="./assets/images/B5.jpg" alt="client logo">
+                                    </a>
+                                </div>
                             </li>
 
                             <li class="clients-item">
-                                <a href="https://www.band.health/">
-                                    <img src="./assets/images/B6.jpg" alt="client logo">
-                                </a>
+                                <div class="brighten">
+                                    <a href="https://www.band.health/">
+                                        <img src="./assets/images/B6.jpg" alt="client logo">
+                                    </a>
+                                </div>
                             </li>
 
                             <li class="clients-item">
-                                <a href="https://www.band.health/">
-                                    <img src="./assets/images/B7.jpg" alt="client logo">
-                                </a>
+                                <div class="brighten">
+                                    <a href="https://www.band.health/">
+                                        <img src="./assets/images/B7.jpg" alt="client logo">
+                                    </a>
+                                </div>
                             </li>
 
                             <li class="clients-item">
-                                <a href="https://www.band.health/">
-                                    <img src="./assets/images/B8.jpg" alt="client logo">
-                                </a>
+                                <div class="brighten">
+                                    <a href="https://www.band.health/">
+                                        <img src="./assets/images/B8.jpg" alt="client logo">
+                                    </a>
+                                </div>
                             </li>
 
                             <li class="clients-item">
-                                <a href="https://www.band.health/">
-                                    <img src="./assets/images/B9.jpg" alt="client logo">
-                                </a>
+                                <div class="brighten">
+                                    <a href="https://www.band.health/">
+                                        <img src="./assets/images/B9.jpg" alt="client logo">
+                                    </a>
+                                </div>
                             </li>
 
                             <li class="clients-item">
-                                <a href="https://www.band.health/">
-                                    <img src="./assets/images/B10.jpg" alt="client logo">
-                                </a>
+                                <div class="brighten">
+                                    <a href="https://www.band.health/">
+                                        <img src="./assets/images/B10.jpg" alt="client logo">
+                                    </a>
+                                </div>
                             </li>
 
                             <li class="clients-item">
-                                <a href="https://www.band.health/">
-                                    <img src="./assets/images/B11.jpg" alt="client logo">
-                                </a>
+                                <div class="brighten">
+                                    <a href="https://www.band.health/">
+                                        <img src="./assets/images/B11.jpg" alt="client logo">
+                                    </a>
+                                </div>
                             </li>
 
                         </ul>
