--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Edison, New Jersey, USA</address>
+              <address>New Brunswick, New Jersey, USA</address>
             </div>
 
           </li>
