--- a/index.html
+++ b/index.html
@@ -418,13 +418,16 @@
                         <li class="skills-item"><span class="skill-pill">CSS</span></li>
                         <li class="skills-item"><span class="skill-pill">SQL</span></li>
                         <li class="skills-item"><span class="skill-pill">MongoDB</span></li>
-                        <li class="skills-item"><span class="skill-pill">C#</span></li>
+                        <li class="skills-item"><span class="skill-pill">C</span></li>
+                        <li class="skills-item"><span class="skill-pill">C++</span></li>
+                        <li class="skills-item"><span class="skill-pill">PHP</span></li>
                     </ul>
                 </div>
                 <div class="skills-category">
                     <h4>Frameworks:</h4>
                     <ul class="skills-list">
                         <li class="skills-item"><span class="skill-pill">React-Native</span></li>
+                        <li class="skills-item"><span class="skill-pill">Angular.js</span></li>
                         <li class="skills-item"><span class="skill-pill">Android SDK</span></li>
                         <li class="skills-item"><span class="skill-pill">React.js</span></li>
                         <li class="skills-item"><span class="skill-pill">Next.js</span></li>
