--- a/index.html
+++ b/index.html
@@ -647,6 +647,29 @@
 
                     <li class="timeline-item">
 
+                        <h4 class="h4 timeline-item-title">Full-Stack Developer Intern</h4>
+                        <a href="https://sca.rutgers.edu/">
+                            <h2 class="h4 timeline-item-title">Bluesap Solutions</h2>
+                        </a>
+                        <span>Jan 2022 — May 2024</span>
+                        <span>New York, New York, United States</span>
+
+                        <ul class="timeline-bullet-points">
+                            <li class="timeline-text">
+                                Developed and launched client web applications, integrating features such as real-time chat functionality,
+                                customizable user profiles, and interactive data visualization.
+                            </li>
+                            <li class="timeline-text">
+                                Collaborated on the development of two mobile applications for iOS and Android platforms, implementing
+                                user feedback to add features like real-time notifications and in-app purchases.
+                            </li>
+
+                        </ul>
+
+                    </li>
+                    
+                    <li class="timeline-item">
+
                         <h4 class="h4 timeline-item-title">Building Operations Manager</h4>
                         <a href="https://sca.rutgers.edu/">
                             <h2 class="h4 timeline-item-title">Rutgers Student Center and Activities</h2>
