--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
                     <li class="timeline-item">
 
                         <h4 class="h4 timeline-item-title">Full-Stack Developer Intern</h4>
-                        <a href="https://sca.rutgers.edu/">
+                        <a href="https://www.bluesap.us/">
                             <h2 class="h4 timeline-item-title">Bluesap Solutions</h2>
                         </a>
                         <span>Jan 2022 — May 2024</span>
