updated recommendation from linkedin

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Aryaman Patel">Aryaman Patel</h1>
+            <h1 class="name" title="Aryaman Patel">Aryaman Patel</h1>
 
-          <p class="title">Aspiring Developer</p>
+            <!--p class="title">Aspiring Developer</!--p>-->
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -334,11 +334,16 @@
 
                             <div class="testimonials-text" data-testimonials-text>
                                 <p>
-                                    Aryaman has demonstrated an aptitude for software development, particularly in the frontend.
-                                    He was able to complete delegated tasks quickly and effectively with guidance appropriate for
-                                    any junior developer getting onboard a new project. His design skills are top notch. With very
-                                    little direction Aryaman redesigned our app’s home screen to bring the look and feel into
-                                    alignment with a change in brand identity.
+                                    Aryaman served as a software developer for us at BandHealth. Aryaman is a star. He got up to 
+                                    speed extremely quickly, tackling project on his own almost immediately. Aryaman accelerate 
+                                    our development tremendously. He is a quick-learner and is eager to try new things and learn 
+                                    from doing so. What is most rewarding about working with Aryaman, aside from his positive demeanor, 
+                                    is his ability to get the big picture. When working on a project he constantly takes initiative 
+                                    and makes suggestions that support the overall business objectives. He is not a developer that 
+                                    sits behind a computer and doesn't care to learn the why behind the work. I could not give Aryaman 
+                                    a higher review. He is going to be an extremely successful developer and anyone who has 
+                                    the chance to work with him is extremely lucky. He contributes immensely to overall objectives, 
+                                    and always does so with a smile on his face.
                                 </p>
                                 <a href="./assets/images/Bandhealth.pdf" id="viewRec" target="_blank" style="color: #FFC000 " ;>View Full Recommendation Letter</a>
                             </div>
