Updated resume, experience & skills, sept

--- a/index.html
+++ b/index.html
@@ -469,6 +469,16 @@
                         <li class="skills-item"><span class="skill-pill">Responsive Design</span></li>
                     </ul>
                 </div>
+                <div class="skills-category">
+                    <h4>Other:</h4>
+                    <ul class="skills-list">
+                        <li class="skills-item"><span class="skill-pill">Wordpress</span></li>
+                        <li class="skills-item"><span class="skill-pill">AutoCAD</span></li>
+                        <li class="skills-item"><span class="skill-pill">SolidWorks</span></li>
+                        <li class="skills-item"><span class="skill-pill">Revit</span></li>
+                        <li class="skills-item"><span class="skill-pill">Ad Campaign </span></li>
+                    </ul>
+                </div>
             </section>
 
             <section class="timeline">
@@ -524,7 +534,7 @@
                         <a href="https://www.band.health/">
                             <h2 class="h4 timeline-item-title">Bandhealth, Inc</h2>
                         </a>
-                        <span>Sept 2023 — May 2024</span>
+                        <span>Sept 2023 — Present</span>
                         <span>Hoboken, New Jersey, United States</span>
                         
                         
@@ -753,7 +763,7 @@
                         <a href="https://github.com/1aryamanp">
                             <h2 class="h5">Personal Entrepreneurial Project</h2>
                         </a>
-                        <span>Apr 2024 — Current</span>
+                        <span>Apr 2024 — Aug 2024</span>
 
                         <ul class="timeline-bullet-points">
                             <li class="timeline-text">
