Fixed a spelling mistake

--- a/index.html
+++ b/index.html
@@ -530,8 +530,8 @@
 
                     <li class="timeline-item">
 
-                        <h4 class="h4 timeline-item-title">Contractor: Exectutive SCM & CR</h4>
-                        <a href="https://sca.rutgers.edu/">
+                        <h4 class="h4 timeline-item-title">Contractor: Executive SCM & CR</h4>
+                        <a href="https://www.meteoricbiopharma.com/">
                             <h2 class="h4 timeline-item-title">Meteoric Biopharmaceuticals</h2>
                         </a>
                         <span>Nov 2024 - Present</span>
